[package]
name = "phoenix-rec"
version = "0.2.11"
edition = "2021"
description = "A simple Recording and sending repo for recorded data on the ev3"
license = "MIT"
repository = "https://github.com/TomtheCoder2/phoenix_rec"
readme = "README.md"
categories = ["development-tools"]
authors = ["TomtheCoder2 (Nautilus) <@TomtheCoder2>"]
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.1"
bincode = "1.3.3"
lz4-compression = "0.7.0"